_magpie_logs/triangle-c_slow_1687340671.log
2023-06-21 10:44:31,186	[DEBUG]	==== CONFIG ====
[magpie]
import = 
seed = 
log_dir = _magpie_logs
work_dir = _magpie_work
local_original_copy = False
local_original_name = __original__
output_encoding = ascii
edit_retries = 10
default_timeout = 30
default_lengthout = 10000.0
diff_method = unified

[software]
path = examples/code/triangle-c_slow
target_files = 
	triangle.c.xml
program = BasicProgram
engine_rules = 
	*.params : ConfigFileParamsEngine
	*.xml : SrcmlEngine
	* : LineEngine
engine_config = 
	*.params : [params]
	*.xml : [srcml]
setup_cmd = 
setup_timeout = 
setup_lengthout = 
compile_cmd = make test_triangle run_triangle
compile_timeout = 
compile_lengthout = 
test_cmd = ./test_triangle
test_timeout = 
test_lengthout = 
run_cmd = ./run_triangle
run_timeout = 1
run_lengthout = 
fitness = time

[srcml]
rename = 
	stmt: break continue decl_stmt do expr_stmt for goto if return switch while
	number: literal_number
focus = block stmt operator_comp operator_arith number
internodes = block
process_pseudo_blocks = True
process_literals = True
process_operators = True

[params]
timing = test run
cli_prefix = --
cli_glue = =
cli_boolean = show
cli_boolean_prefix_true = 
cli_boolean_prefix_false = no-
silent_prefix = @
silent_suffix = $

[search]
protocol = BasicProtocol
algorithm = FirstImprovement
possible_edits = 
	StmtReplacement
	StmtInsertion
	StmtDeletion
warmup = 3
warmup_strategy = last
max_steps = 100
max_time = 60
target_fitness = 
cache_maxsize = 40
cache_keep = 0.2

[search.ls]
delete_prob = 0.5
max_neighbours = 
when_trapped = continue
accept_fail = False
tabu_length = 10

[search.gp]
pop_size = 10
delete_prob = 0.5
offspring_elitism = 0.1
offspring_crossover = 0.5
offspring_mutation = 0.4
uniform_rate = 0.5


2023-06-21 10:44:31,186	[INFO]	==== WARMUP ====
2023-06-21 10:44:32,316	[INFO]	WARM    COMPILE_CODE_ERROR    None                    
2023-06-21 10:44:32,316	[INFO]	!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*
2023-06-21 10:44:32,316	[INFO]	CWD: /home/tsongpet/MSc-SSE-GI-project/_magpie_work/triangle-c_slow_1687340671/triangle-c_slow
2023-06-21 10:44:32,317	[INFO]	CMD: ['make', 'test_triangle', 'run_triangle']
2023-06-21 10:44:32,317	[INFO]	STATUS: SUCCESS
2023-06-21 10:44:32,317	[INFO]	RETURN_CODE: 2
2023-06-21 10:44:32,317	[INFO]	RUNTIME: 1.1264684200286865
2023-06-21 10:44:32,317	[INFO]	STDOUT:
gcc -c triangle.c -o triangle.o
gcc -o test_triangle test_triangle.c triangle.o
gcc -o run_triangle run_triangle.c triangle.o

2023-06-21 10:44:32,317	[INFO]	STDERR:
run_triangle.c: In function 'main':
run_triangle.c:38:3: error: 'for' loop initial declarations are only allowed in C99 mode
   for (int i=0; i<3; i++)
   ^
run_triangle.c:38:3: note: use option -std=c99 or -std=gnu99 to compile your code
make: *** [run_triangle] Error 1

2023-06-21 10:44:32,317	[INFO]	!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*
2023-06-21 10:44:32,317	[INFO]	Magpie stopped because it was unable to run the (unmodified) target software
2023-06-21 10:44:32,317	[INFO]	Self-diagnostic:
2023-06-21 10:44:32,318	[INFO]	The "compile_cmd" command failed with a nonzero exit code
2023-06-21 10:44:32,318	[INFO]	--> try to run it manually
2023-06-21 10:44:32,318	[INFO]	!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*!*
2023-06-21 10:44:32,318	[INFO]	==== END ====
2023-06-21 10:44:32,318	[INFO]	Reason: None
